<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_input_satu"
    android:orientation="vertical"
    tools:context=".daftar">

    <View
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/tosca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="210dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/monsmedium"
                    android:textStyle="bold"
                    android:lineSpacingExtra="9dp"
                    android:text="DAFTAR PMB"
                    android:textAlignment="center"
                    android:textColor="#FFFF"
                    android:textSize="25dp"
                    android:layout_marginBottom="10dp"
                    android:shadowColor="#98666666"
                    android:shadowDx="0"
                    android:shadowDy="6"
                    android:shadowRadius="3" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="173dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo"></de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pendaftaran Mahasiswa Baru"
                    android:fontFamily="@font/monsmedium"
                    android:textSize="18dp"
                    android:textColor="#FFFF"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_layout_white2"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="210dp"
                android:elevation="5dp" >

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:text="Welcome!"
                    android:layout_gravity="center"
                    android:fontFamily="@font/monsregular"
                    android:textSize="24dp"/>

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:text="Isi data diri kamu"
                    android:layout_gravity="center"
                    android:fontFamily="@font/monsregular"
                    android:textSize="18dp"
                    android:textColor="#12A346"/>

                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/monsmedium"
                        android:text="@string/username_label"
                        android:textColor="@color/grayPrimary"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/username"
                        android:background="@drawable/bg_input_edit"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:textColor="@color/blackPrimary"
                        android:inputType="text"
                        android:textSize="15dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:text="@string/password_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monsmedium"
                        android:textSize="15dp"
                        android:textColor="@color/grayPrimary"
                        android:layout_marginBottom="8dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:background="@drawable/bg_input_edit"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:paddingRight="12dp"
                            android:layout_marginRight="55dp"
                            android:textColor="@color/blackPrimary"
                            android:textSize="15dp" />

                        <cyd.awesome.material.AwesomeText
                            android:id="@+id/showPass"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:layout_alignParentRight="true"
                            android:gravity="center"
                            android:textColor="#99000000"
                            android:textSize="20dp"
                            app:awesome_font="material_design"
                            app:awesome_icon="MD_VISIBILITY_OFF" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:text="@string/nama_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monsmedium"
                        android:textSize="15dp"
                        android:textColor="@color/grayPrimary"
                        android:layout_marginBottom="8dp"/>

                    <EditText
                        android:id="@+id/namalengkap"
                        android:background="@drawable/bg_input_edit"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:textColor="@color/blackPrimary"
                        android:inputType="text"
                        android:textSize="15dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:text="@string/email_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monsmedium"
                        android:textSize="15dp"
                        android:textColor="@color/grayPrimary"
                        android:layout_marginBottom="8dp"
                        />

                    <EditText
                        android:id="@+id/email"
                        android:background="@drawable/bg_input_edit"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:textColor="@color/blackPrimary"
                        android:inputType="textEmailAddress"
                        android:textSize="15dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:text="@string/nohp_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monsmedium"
                        android:textSize="15dp"
                        android:textColor="@color/grayPrimary"
                        android:layout_marginBottom="8dp" />

                    <EditText
                        android:id="@+id/nohp"
                        android:background="@drawable/bg_input_edit"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:textColor="@color/blackPrimary"
                        android:inputType="text"
                        android:textSize="15dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:text="@string/jk_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monsmedium"
                        android:textSize="15dp"
                        android:textColor="@color/grayPrimary"
                        android:layout_marginBottom="8dp"
                        />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:orientation="horizontal">

                        <AutoCompleteTextView
                            android:id="@+id/sp_jeniskelamin"
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:layout_marginRight="55dp"
                            android:background="@drawable/bg_input_edit"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:paddingRight="12dp"
                            android:textColor="@color/blackPrimary"
                            android:textSize="15dp" />

                        <ImageView
                                android:layout_alignParentRight="true"
                                android:id="@+id/iv_dropdown"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:lines="1"
                                android:paddingRight="12dp"
                                android:layout_marginLeft="12dp"
                                android:src="@drawable/ic_arrow_drop_down_circle_black_24dp"
                                android:textColor="@color/blackPrimary" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone">

                    <TextView
                        android:text="Status Ujian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monsmedium"
                        android:textSize="15dp"
                        android:textColor="@color/grayPrimary"
                        android:layout_marginBottom="8dp" />

                    <EditText
                        android:id="@+id/status_ujian"
                        android:background="@drawable/bg_input_edit"
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:lines="1"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:textColor="@color/blackPrimary"
                        android:inputType="text"
                        android:text=""
                        android:enabled="false"
                        android:textSize="15dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <Button
                        android:layout_gravity="center"
                        android:id="@+id/btn_continue"
                        android:layout_width="290dp"
                        android:layout_height="45dp"
                        android:background="@drawable/bg_button_green"
                        android:fontFamily="@font/monsmedium"
                        android:text="Continue"
                        android:textColor="#FFFF"
                        android:textSize="18dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>